...
//

import SwiftUI

struct SearchTextField: View {
    @Binding var text: String
    var placeholder: String = "Search journal entries"
    var onCancel: () -> Void

    @Environment(\.theme) private var theme
    @Environment(\.typography) private var type
    @FocusState private var isFocused: Bool

...
